human-intervention-logs/io.grpc:grpc-xds:1.68.0/gradle-test/gradle-test-2026-05-03T09-42-08-492255Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.grpc:grpc-xds:1.68.0
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/tests/src/io.grpc/grpc-xds/1.68.0/src/test/java/io_grpc/grpc_xds/Grpc_xdsTest.java:225: error: method contains in class AbstractMapAssert<SELF,ACTUAL,K#1,V#1> cannot be applied to given types;
        assertThat(certificateProvider.config()).contains(entry("certificate_file", "cert.pem"));
                                                ^

> Task :compileTestJava FAILED
  required: Entry<? extends String,? extends CAP#1>[]
  found:    MapEntry<String,String>
  reason: varargs mismatch; inference variable V#2 has incompatible bounds
      upper bounds: CAP#1,Object
      lower bounds: String
  where SELF,ACTUAL,K#1,V#1,V#2,K#2 are type-variables:
    SELF extends AbstractMapAssert<SELF,ACTUAL,K#1,V#1> declared in class AbstractMapAssert
    ACTUAL extends Map<K#1,V#1> declared in class AbstractMapAssert
    K#1 extends Object declared in class AbstractMapAssert
    V#1 extends Object declared in class AbstractMapAssert
    V#2 extends Object declared in method <K#2,V#2>entry(K#2,V#2)
    K#2 extends Object declared in method <K#2,V#2>entry(K#2,V#2)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/tests/src/io.grpc/grpc-xds/1.68.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/tests/src/io.grpc/grpc-xds/1.68.0/src/test/java/io_grpc/grpc_xds/Grpc_xdsTest.java:277: error: constructor BackendLoadMetricStats in class BackendLoadMetricStats cannot be applied to given types;
        BackendLoadMetricStats backendMetricStats = new BackendLoadMetricStats();
                                                    ^
  required: long,double
  found:    no arguments
  reason: actual and formal argument lists differ in length
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/tests/src/io.grpc/grpc-xds/1.68.0/src/test/java/io_grpc/grpc_xds/Grpc_xdsTest.java:225: error: method contains in class AbstractMapAssert<SELF,ACTUAL,K#1,V#1> cannot be applied to given types;
          assertThat(certificateProvider.config()).contains(entry("certificate_file", "cert.pem"));
                                                  ^
    required: Entry<? extends String,? extends CAP#1>[]
    found:    MapEntry<String,String>
    reason: varargs mismatch; inference variable V#2 has incompatible bounds
        upper bounds: CAP#1,Object
        lower bounds: String
    where SELF,ACTUAL,K#1,V#1,V#2,K#2 are type-variables:
      SELF extends AbstractMapAssert<SELF,ACTUAL,K#1,V#1> declared in class AbstractMapAssert
      ACTUAL extends Map<K#1,V#1> declared in class AbstractMapAssert
      K#1 extends Object declared in class AbstractMapAssert
      V#1 extends Object declared in class AbstractMapAssert
      V#2 extends Object declared in method <K#2,V#2>entry(K#2,V#2)
      K#2 extends Object declared in method <K#2,V#2>entry(K#2,V#2)
    where CAP#1 is a fresh type-variable:
      CAP#1 extends Object from capture of ?
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/tests/src/io.grpc/grpc-xds/1.68.0/src/test/java/io_grpc/grpc_xds/Grpc_xdsTest.java:277: error: constructor BackendLoadMetricStats in class BackendLoadMetricStats cannot be applied to given types;
          BackendLoadMetricStats backendMetricStats = new BackendLoadMetricStats();
                                                      ^
    required: long,double
    found:    no arguments
    reason: actual and formal argument lists differ in length
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 2s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4740-6e4bb641/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.grpc:grpc-xds:1.68.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
9 actionable tasks: 1 executed, 8 up-to-date
